2003-09-02	Joel Sherrill <joel@OARcorp.com>

	* src/open.c: Fix typo.

2003-09-02	Joel Sherrill <joel@OARcorp.com>

	* src/malloc.c: Remove test define left in.

2003-09-02	Ilya Alexeev <ilya@continuum.ru>

	PR 472/filesystem
	src/malloc.c: Need to include apimutex.h when MALLOC_STATS is defined.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 449/rtems:
	* src/getegid.c: New (Copied from ../posix/src).
	* src/geteuid.c: New (Copied from ../posix/src).
	* src/getgid.c: New (Copied from ../posix/src).
	* src/getgroups.c: New (Copied from ../posix/src).
	* src/getlogin.c: New (Copied from ../posix/src).
	* src/getpgrp.c: New (Copied from ../posix/src).
	* src/getpid.c: New (Copied from ../posix/src).
	* src/getppid.c: New (Copied from ../posix/src).
	* src/getuid.c: New (Copied from ../posix/src).
	* src/setpgid.c: New (Copied from ../posix/src).
	* src/setsid.c: New (Copied from ../posix/src).
	* src/no_posix: Remove getpid and _getpid_r.
	* Makefile.am: Reflect changes above.

2003-08-14	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am: Add fileio to list of interactive tests.
	* src/sync.c: New (Copied from ../posix/src). New file.

2003-08-05	Till Strauman <strauman@slac.stanford.edu>

	PR 442/filesystem
	* src/open.c: file never closed if ftruncate() fails in open()

2003-07-08	Joel Sherrill <joel@OARcorp.com>

	PR 419/rtems
	* src/termios.c: Removed warning.

2003-07-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove (Merged-in into ../configure.ac)
	* Makefile.am: DOC_FILES = src/TODO src/CASES,
	Reflect having merged configure.ac into ../configure.ac.
	* src/config.h: New.

2003-07-02	Chris Johns <cjohns@cybertec.com.au>

	* include/rtems/libio.h, src/termios.c: Patch by Chris Johns
	<cjohns@cybertec.com.au> adding the rtems_termios_bufsize call.
	
2003-05-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Conditionally install stdint.h/inttypes.h.
	* configure.ac: Check for system-stdint.h/inttypes.h.
